import React from 'react';
import {cleanup, fireEvent, render} from 'react-testing-library';

import SortableTable from '../SortableTable';

const setup = () => {
	const changelogJSONObj = {
		results: [
			{
				summary:
					'IE11 Web Image Resizing Does not Maintain Initial Aspect Ratio',
				components: ['Frontend Infrastructure > WYSIWYG'],
				product: 'DXP 7.0',
				release: 'GA',
				description: 'description',
				key: 'LPS-90100',
				url: '/'
			},
			{
				summary: 'Add menu - Heading order invalid',
				components: ['Accessibility'],
				product: 'DXP 7.0',
				release: 'GA',
				description: 'description 2',
				key: 'LPS-85155',
				url: '/'
			}
		],
		total: 2
	}

	const highlightsJSONObj = {
		results: [
			{
				content: 'Content Text',
				releaseDate: 'Mar 6, 2019',
				resourcePrimKey: '118267960',
				title: 'Fix Pack 2'
			},
			{
				content: 'Content 2 Text',
				releaseDate: 'Mar 1, 2019',
				resourcePrimKey: '118267952',
				title: 'Fix Pack1'
			}
		],
		total: 2
	};

	const noResults = {
		results: [],
		total: 0
	};

	const utils = render(<SortableTable jsonObject={highlightsJSONObj} tab="highlights" />);

	return {
		changelogJSONObj,
		noResults,
		...utils
	};
};

afterEach(cleanup);

describe('SortableTable', () => {
	it('renders highlights table correctly', () => {
		const {container} = setup();

		expect(container).toMatchSnapshot();
	});

	it('renders changelog table correctly', () => {
		const {changelogJSONObj} = setup();

		const {container} = render(<SortableTable jsonObject={changelogJSONObj} tab="changelog" />);

		expect(container).toMatchSnapshot();
	});

	it('renders no results message', () => {
		const {container, getByText, noResults, rerender} = setup();

		rerender(<SortableTable jsonObject={noResults} tab="highlights" />);

		expect(
			getByText('no-results-found-to-match-your-selection')
		).toBeTruthy();
		expect(container).toMatchSnapshot();
	});

	it('renders in reverse order when sorting indicator is clicked', () => {
		const {container, getByRole} = setup();

		fireEvent.click(getByRole('button'));

		expect(container).toMatchSnapshot();
	});
});